updated for message in emailjs

--- a/index.html
+++ b/index.html
@@ -155,6 +155,10 @@
         </div>
     </footer>
 
+    <!-- EmailJS SDK -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <!-- Google reCAPTCHA v3 -->
+    <script src="https://www.google.com/recaptcha/api.js?render=6LcH2bQrAAAAAD5n84-VQEcDtBJg8aMHYFyInTRC"></script>
     <script src="script.js"></script>
 </body>
 </html>
